- Implemented __builtin_expect (thanks, Ada!)
- Several additional optimizations contributed by Ada
- Fixed incorrect constant optimization of inline assembly (again, Ada caught this one)
- Added files included by FILE directive to .zip files
- Fixed some missing optimizations when -l was enabled
- Fixed incorrect assembly output for files not ending in newline when -l is on

Version 6.1.1
- Added special -D_XTLFREQ=x and -D_XINFREQ=x command line defines
- Fixed IF in assembly debug
- Fixed constant SIGNX evaluation
- Made the preprocessor ignore characters after a line comment start (like ')
- Made jmp relative calculations act more like the official compiler
- Use proper full name for C include files in zip creation
- Remove .zip file on failed creation

Version 6.1.0
- Added basic support for compiling project files (.fpide or .side)
- Implemented ^@ and FIELD[] for Spin2
- Implemented conditional assembly instructions if, elseif, else, and endif
- Merged Ada's improved strlen() function
- Merged some register allocation improvements from Ada
- Provide syntax for C `struct using` to override constants in Spin2 objects

Version 6.0.5
- Fixed an optimizer bug with inlined functions
- Fixed a spurious "use before set" warning in sizeof()
- Improved the error message for try blocks in bytecode output

Version 6.0.4
- Fixed incorrect file name after #include in some rare cases (when the included file's name exactly matches the end of the original file)

Version 6.0.3
- Fix a bug in P1 listing file output

Version 6.0.2
- Fixed an internal error where BASIC array references sometimes look like calls
- Fixed some spurious warnings about 0-0 style operands in inline assembly
- Fixed number of blocks calculation in FatFS stat() function.
- Fixed some "unknown type xx passed to IsArrayType" errors

Version 6.0.1
- Added missing file for LittleFS file system.

Version 6.0.0
- Added interpreter and code size printing if --sizes is given